<resources>
    <string name="app_name">Phramazing</string>
    <string name="title_home">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_save_data">Add</string>
    <string name="cancel">Cancel</string>
    <string name="label_edit_author">Edit Author</string>
    <string name="label_edit_phramaze">Edit Phramaze Text</string>
    <string name="add_new_phramaze">Add New Phramaze</string>
    <string name="phramaze_removed">Phramaze Removed</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="title_export">Export DB</string>
    <string name="title_import">Import DB</string>
</resources>
