<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/extra_extra_large_padding">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingBottom="@dimen/extra_extra_large_padding"
            android:text="@string/add_new_phramaze"
            android:textSize="@dimen/medium_text_size"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phramaze_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_textview"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phramaze_text_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/label_edit_phramaze"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_author_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phramaze_input_layout">

            <AutoCompleteTextView
                android:id="@+id/author_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/label_edit_author"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_author_input_layout"
            android:layout_gravity="bottom"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/loading_indicator">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/cancel_button"
                android:text="@string/label_save_data"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>